logs/validate.20260408-053847.log
Mode: isolate
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error: unexpected token, expected `;`
   --> src/Chap37/BSTRBStEph.rs:474:29
    |
474 | ...                   by {
    |                       ^^

error[E0425]: cannot find type `BSTRBStEph` in this scope
   --> src/Chap37/BSTRBStEph.rs:721:50
    |
721 |     impl<T: std::fmt::Debug> std::fmt::Debug for BSTRBStEph<T> {
    |                                                  ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `BSTRBStEph` in this scope
   --> src/Chap37/BSTRBStEph.rs:729:72
    |
729 |     impl<T: std::fmt::Debug + std::fmt::Display> std::fmt::Display for BSTRBStEph<T> {
    |                                                                        ^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 3s
Sampled Memory Usage: peak rust_verify RSS: 1416MB, peak z3 RSS: 308MB, min free: 24579MB
Sampled CPU Usage: rust_verify: 12s, z3 children: 3s
